--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   color: rgb(59, 59, 59);
   width: 100%;
-  margin-top: 5px;
+  margin: 0;
 }
 #landing {
   width: 100%;
@@ -54,7 +54,7 @@ body {
 
 img {
   width: 350px;
-  height: 250px;
+  height: 350px;
   position: relative;
   left: 38%;
   top: 20%;
